clusters/management-cluster/apps/components/kyverno-policy-reporter/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kyverno-policies-reporter
  namespace: kyverno
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    cert-manager.io/cluster-issuer: smallstep-acme-http01
    traefik.ingress.kubernetes.io/router.tls: "true"
    argocd.argoproj.io/sync-wave: '20'
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: policy-reporter-ui
            port:
              number: 8080
        path: /
        pathType: Prefix
    host: kyverno-mgmt-t.projekte.eitco.de
  tls:
  - hosts:
      - kyverno-mgmt-t.projekte.eitco.de
    secretName: kyverno-policy-reporter-tls
